<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:layout_below="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            android:layout_margin="@dimen/default_margin"
            app:cardElevation="@dimen/medium_padding">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin"
                    android:layout_below="@+id/title">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_task_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_task_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/task_name"
                            android:inputType="text"
                            android:paddingStart="@dimen/default_margin"
                            android:theme="@style/TIStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_task_vol_of_work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_below="@+id/ti_task_name">

                        <EditText
                            android:id="@+id/et_task_vol_of_work"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/volume_of_works"
                            android:inputType="numberDecimal"
                            android:paddingStart="@dimen/default_margin"
                            android:theme="@style/TIStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_unit_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_below="@+id/ti_task_vol_of_work">

                        <EditText
                            android:id="@+id/et_unit_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/unit_rate"
                            android:inputType="numberDecimal"
                            android:paddingStart="@dimen/default_margin"
                            android:theme="@style/TIStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_unit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_below="@+id/ti_unit_rate">

                        <AutoCompleteTextView
                            style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                            android:id="@+id/unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/unit"
                            android:inputType="text"
                            android:paddingStart="@dimen/default_margin"
                            android:theme="@style/TIStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_below="@+id/ti_unit">

                        <EditText
                            android:id="@+id/et_start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/start_date"
                            android:inputType="text"
                            android:focusable="false"
                            android:paddingStart="@dimen/default_margin"
                            android:theme="@style/TIStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_finished_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_below="@+id/ti_start_date">

                        <EditText
                            android:id="@+id/et_finished_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/finished_date"
                            android:inputType="text"
                            android:focusable="false"
                            android:paddingStart="@dimen/default_margin"
                            android:theme="@style/TIStyle" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:layout_below="@+id/ti_finished_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:text="@string/update"
                        android:id="@+id/btn_add"/>

                </RelativeLayout>



            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit">
    </com.google.android.gms.ads.AdView>




</RelativeLayout>
