<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/adView"
        android:layout_margin="@dimen/default_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/small_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/small_padding">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:id="@+id/ti_task">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                        android:id="@+id/et_task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_task"
                        android:fontFamily="@font/arima_madurai_medium"
                        android:inputType="text"/>



                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/default_margin"
                    android:id="@+id/ti_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/work_done_date"
                        android:inputType="date"
                        android:paddingStart="@dimen/default_margin"
                        android:focusable="false"
                        android:fontFamily="@font/arima_madurai_medium"
                        android:theme="@style/TIStyle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/small_padding"
                    android:id="@+id/ti_vol_of_work_done"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vol_of_work_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/volume_of_works_done"
                        android:fontFamily="@font/arima_madurai_medium"
                        android:inputType="numberDecimal"
                        android:paddingStart="@dimen/default_margin"
                        android:theme="@style/TIStyle" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Workdone Photo"
                    android:fontFamily="@font/arima_madurai_medium"
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/large_text_size"
                    android:gravity="center_horizontal"/>

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="240dp"
                    android:id="@+id/image"
                    android:scaleType="fitXY"
                    android:background="@android:drawable/picture_frame"
                    android:layout_gravity="center_horizontal" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/browse"
                    android:id="@+id/browse"/>


                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/save"
                    android:id="@+id/save"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit"/>



</RelativeLayout>