<?xml version="1.0" encoding="utf-8"?>

<com.ramotion.foldingcell.FoldingCell
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:folding-cell="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/folding_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    folding-cell:additionalFlipsCount="0"
    folding-cell:animationDuration="500"
    folding-cell:backSideColor="@color/light_grey"
    folding-cell:cameraHeight="30"
    android:layout_marginBottom="@dimen/small_padding">

    <LinearLayout
        android:id="@+id/cell_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/cell_title_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="@dimen/block_height"
                android:layout_height="@dimen/block_height"
                android:background="@color/statusColor"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/status2"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/block_height"
                android:layout_marginStart="@dimen/very_small_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/small_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Task Name"
                        android:id="@+id/name2"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/remaining2"
                        android:textSize="@dimen/small_text_size"
                        android:textStyle="italic"
                        android:text="5 Days Remaining"/>



                </LinearLayout>



            </androidx.cardview.widget.CardView>





        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/very_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="Info"
                    android:padding="@dimen/small_padding"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/small_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/start_date"
                            style="@style/TaskDetailTextStyle" />
                        <TextView
                            android:gravity="end"
                            style="@style/TaskDetailTextStyle"
                            android:id="@+id/start_date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/finished_date"
                            style="@style/TaskDetailTextStyle" />

                        <TextView
                            style="@style/TaskDetailTextStyle"
                            android:gravity="end"
                            android:id="@+id/finished_date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/duration"
                            style="@style/TaskDetailTextStyle" />

                        <TextView
                            style="@style/TaskDetailTextStyle"
                            android:gravity="end"
                            android:id="@+id/duration"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/volume_of_works"
                            style="@style/TaskDetailTextStyle" />
                        <TextView
                            style="@style/TaskDetailTextStyle"
                            android:gravity="end"
                            android:id="@+id/vol_of_works"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/volume_of_works_done"
                            style="@style/TaskDetailTextStyle" />
                        <TextView
                            style="@style/TaskDetailTextStyle"
                            android:gravity="end"
                            android:id="@+id/vol_of_work_done"/>

                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/very_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/small_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="Progress"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:indeterminate="false"
                        android:layout_centerVertical="true"
                        android:max="100"
                        android:progress="20"
                        android:layout_toStartOf="@+id/tv_progress"/>

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:id="@+id/tv_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_padding"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:text="Progress"/>

                </RelativeLayout>






            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/very_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/small_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Actions"
                    android:padding="@dimen/small_padding"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:layout_marginStart="@dimen/small_padding"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:text="@string/detail"
                        android:id="@+id/view_project"/>

                    <com.google.android.material.button.MaterialButton
                        android:layout_marginStart="@dimen/small_padding"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:text="@string/edit"
                        android:id="@+id/edit"/>

                    <com.google.android.material.button.MaterialButton
                        android:layout_marginStart="@dimen/small_padding"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:text="@string/delete"
                        android:id="@+id/delete"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/cell_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="@dimen/block_height"
            android:layout_height="@dimen/block_height"
            android:background="@color/statusColor"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:id="@+id/status"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/block_height"
            android:layout_marginStart="@dimen/very_small_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/small_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Task Name"
                    android:id="@+id/name"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/remaining"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="italic"
                    android:text="5 Days Remaining"/>



            </LinearLayout>



        </androidx.cardview.widget.CardView>





    </LinearLayout>



</com.ramotion.foldingcell.FoldingCell>
